--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,11 +1,10 @@
 /* RESPONSIVE CSS BASICS >>> */
-html {
+
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   /* includes padding and border into the width/height calculation of an alement */
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
 }
 
 img {
